@@ -1,0 +1,13 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@includedir@
+
+
+Name: Ags
+Description: Advanced Gtk+ Sequencer audio processing engine
+URL: http://nongnu.org/gsequencer
+Version: @PACKAGE_VERSION@
+Requires: uuid >= 1.0.2 alsa >= 1.0.25 jack libxml-2.0 >= 2.8.0 sndfile >= 1.0.25 libinstpatch >= 1.0 gobject-2.0 >= 2.32.3 glib-2.0 >= 2.32.3 gmodule-2.0 >= 2.32.3 gthread-2.0 >= 2.32.3 gio-2.0 >= 2.32.3 glib-2.0 >= 2.32.3 gmodule-2.0 >= 2.32.3 gthread-2.0 >= 2.32.3 fontconfig >= 2.11.0 gdk-pixbuf-2.0 >= 2.26.1 cairo >= 1.12.0 gtk+-2.0 >= 2.24.10
+Libs: -L${libdir} -lags-1.0 -lags_thread-1.0 -lags_server-0.7 -lags_audio-1.0 -lags_gui-0.7 -lgsequencer-0.7
+Cflags: -I${includedir}
